# mtg-collection-manager

./: CollectionViewer.ipynb  README.md  ScryfallApi.py  main.py  pyproject.toml
pages/: SearchPage.py
