[project]
name = "mtg-collection-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pygubu-designer>=0.41.4",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "ttkbootstrap>=1.14.2",
]
